Added option to download and use two loRAs.

--- a/Basic_Wan2_1_VACE_&_CausVid_LoRA_4_Text_to_Video(WIP).ipynb
+++ b/Basic_Wan2_1_VACE_&_CausVid_LoRA_4_Text_to_Video(WIP).ipynb
@@ -470,6 +470,7 @@
         "import subprocess\n",
         "from google.colab import files\n",
         "from IPython.display import display, HTML, Image as IPImage\n",
+        "import datetime\n",
         "sys.path.insert(0, '/content/ComfyUI')\n",
         "\n",
         "from comfy import model_management\n",
@@ -496,6 +497,75 @@
         "from comfy_extras.nodes_wan import TrimVideoLatent\n",
         "\n",
         "from pathlib import Path\n",
+        "\n",
+        "def download_with_aria2c(link, folder=\"/content/ComfyUI/models/loras\"):\n",
+        "    import os\n",
+        "\n",
+        "    filename = link.split(\"/\")[-1]\n",
+        "    command = f\"aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {link} -d {folder} -o {filename}\"\n",
+        "\n",
+        "    print(\"Executing download command:\")\n",
+        "    print(command)\n",
+        "\n",
+        "    os.makedirs(folder, exist_ok=True)\n",
+        "    get_ipython().system(command)\n",
+        "\n",
+        "    return filename\n",
+        "\n",
+        "def download_civitai_model(civitai_link, civitai_token, folder=\"/content/ComfyUI/models/loras\"):\n",
+        "    import os\n",
+        "    import time\n",
+        "\n",
+        "    os.makedirs(folder, exist_ok=True)\n",
+        "\n",
+        "    try:\n",
+        "        model_id = civitai_link.split(\"/models/\")[1].split(\"?\")[0]\n",
+        "    except IndexError:\n",
+        "        raise ValueError(\"Invalid Civitai URL format. Please use a link like: https://civitai.com/api/download/models/1523247?...\")\n",
+        "\n",
+        "    civitai_url = f\"https://civitai.com/api/download/models/{model_id}?type=Model&format=SafeTensor\"\n",
+        "    if civitai_token:\n",
+        "        civitai_url += f\"&token={civitai_token}\"\n",
+        "\n",
+        "    timestamp = time.strftime(\"%Y%m%d_%H%M%S\")\n",
+        "    filename = f\"model_{timestamp}.safetensors\"\n",
+        "\n",
+        "    full_path = os.path.join(folder, filename)\n",
+        "\n",
+        "    download_command = f\"wget --max-redirect=10 --show-progress \\\"{civitai_url}\\\" -O \\\"{full_path}\\\"\"\n",
+        "    print(\"Downloading from Civitai...\")\n",
+        "\n",
+        "    os.system(download_command)\n",
+        "\n",
+        "    local_path = os.path.join(folder, filename)\n",
+        "    if os.path.exists(local_path) and os.path.getsize(local_path) > 0:\n",
+        "        print(f\"LoRA downloaded successfully: {local_path}\")\n",
+        "    else:\n",
+        "        print(f\"❌ LoRA download failed or file is empty: {local_path}\")\n",
+        "\n",
+        "    return filename\n",
+        "\n",
+        "\n",
+        "def download_lora(link, folder=\"/content/ComfyUI/models/loras\", civitai_token=None):\n",
+        "    \"\"\"\n",
+        "    Download a model file, automatically detecting if it's a Civitai link or huggingface download.\n",
+        "\n",
+        "    Args:\n",
+        "        link: The download URL (either huggingface or Civitai)\n",
+        "        folder: Destination folder for the download\n",
+        "        civitai_token: Optional token for Civitai downloads (required if link is from Civitai)\n",
+        "\n",
+        "    Returns:\n",
+        "        The filename of the downloaded model\n",
+        "    \"\"\"\n",
+        "    if \"civitai.com\" in link.lower():\n",
+        "        if not civitai_token:\n",
+        "            raise ValueError(\"Civitai token is required for Civitai downloads\")\n",
+        "        return download_civitai_model(link, civitai_token, folder)\n",
+        "    else:\n",
+        "        return download_with_aria2c(link, folder)\n",
+        "\n",
+        "\n",
         "\n",
         "def model_download(url: str, dest_dir: str, filename: str = None, silent: bool = True) -> bool:\n",
         "    \"\"\"\n",
@@ -551,11 +621,44 @@
         "        return False\n",
         "\n",
         "\n",
+        "model_quant = \"Q5_K_M\" # @param [\"Q4_K_M\", \"Q5_0\", \"Q5_K_M\", \"Q6_K\", \"Q8_0\"]\n",
+        "\n",
+        "download_loRA_1 = True # @param {type:\"boolean\"}\n",
+        "lora_1_download_url = \"https://civitai.com/api/download/models/1523247?type=Model&format=SafeTensor\"# @param {\"type\":\"string\"}\n",
+        "\n",
+        "download_loRA_2 = True # @param {type:\"boolean\"}\n",
+        "lora_2_download_url = \"https://huggingface.co/Isi99999/Wan2.1_14B-480p_I2V_LoRAs/resolve/main/5up3r_super_saiyan_transformation.safetensors\"# @param {\"type\":\"string\"}\n",
+        "\n",
+        "token_if_civitai_url = \"b0d7617d73f49112b4cb8e6d6e2e5716\"# @param {\"type\":\"string\"}\n",
+        "\n",
+        "lora_1 = None\n",
+        "if download_loRA_1:\n",
+        "    lora_1 = download_lora(lora_1_download_url, civitai_token=token_if_civitai_url)\n",
+        "# Validate loRA file extension\n",
+        "valid_extensions = {'.safetensors', '.ckpt', '.pt', '.pth', '.sft'}\n",
+        "if lora_1:\n",
+        "    if not any(lora_1.lower().endswith(ext) for ext in valid_extensions):\n",
+        "        print(f\"❌ Invalid LoRA format: {lora_1}\")\n",
+        "        lora_1 = None\n",
+        "    else:\n",
+        "        clear_output()\n",
+        "        print(\"loRA 1 downloaded succesfully!\")\n",
+        "\n",
+        "lora_2 = None\n",
+        "if download_loRA_2:\n",
+        "    lora_2 = download_lora(lora_2_download_url, civitai_token=token_if_civitai_url)\n",
+        "if lora_2:\n",
+        "    if not any(lora_2.lower().endswith(ext) for ext in valid_extensions):\n",
+        "        print(f\"❌ Invalid LoRA format: {lora_2}\")\n",
+        "        lora_2 = None\n",
+        "    else:\n",
+        "        clear_output()\n",
+        "        print(\"loRA 2 downloaded succesfully!\")\n",
+        "\n",
+        "\n",
         "# !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/Comfy-Org/Wan_2.1_ComfyUI_repackaged/resolve/main/split_files/clip_vision/clip_vision_h.safetensors -d /content/ComfyUI/models/clip_vision -o clip_vision_h.safetensors\n",
         "\n",
         "# model_quant = \"Q8_0\"\n",
-        "\n",
-        "model_quant = \"Q5_K_M\" # @param [\"Q4_K_M\", \"Q5_0\", \"Q5_K_M\", \"Q6_K\", \"Q8_0\"]\n",
         "\n",
         "if model_quant == \"Q4_K_M\":\n",
         "    dit_model = model_download(\"https://huggingface.co/QuantStack/Wan2.1-VACE-14B-GGUF/resolve/main/Wan2.1-VACE-14B-Q4_K_M.gguf\", \"/content/ComfyUI/models/diffusion_models\")\n",
@@ -571,24 +674,6 @@
         "text_encoder = model_download(\"https://huggingface.co/Comfy-Org/Wan_2.1_ComfyUI_repackaged/resolve/main/split_files/text_encoders/umt5_xxl_fp8_e4m3fn_scaled.safetensors\", \"/content/ComfyUI/models/text_encoders\")\n",
         "vae_model = model_download(\"https://huggingface.co/Comfy-Org/Wan_2.1_ComfyUI_repackaged/resolve/main/split_files/vae/wan_2.1_vae.safetensors\", \"/content/ComfyUI/models/vae\")\n",
         "\n",
-        "\n",
-        "# Initialize nodes\n",
-        "unet_loader = UnetLoaderGGUF()\n",
-        "model_sampling = ModelSamplingSD3()\n",
-        "clip_loader = CLIPLoader()\n",
-        "clip_encode_positive = CLIPTextEncode()\n",
-        "clip_encode_negative = CLIPTextEncode()\n",
-        "vae_loader = VAELoader()\n",
-        "# clip_vision_loader = CLIPVisionLoader()\n",
-        "# clip_vision_encode = CLIPVisionEncode()\n",
-        "load_image = LoadImage()\n",
-        "load_lora = LoraLoaderModelOnly()\n",
-        "wan_vace_to_video = WanVaceToVideo()\n",
-        "trim_video_latent = TrimVideoLatent()\n",
-        "ksampler = KSampler()\n",
-        "vae_decode = VAEDecode()\n",
-        "save_webp = SaveAnimatedWEBP()\n",
-        "save_webm = SaveWEBM()\n",
         "\n",
         "def clear_memory():\n",
         "    gc.collect()\n",
@@ -714,10 +799,36 @@
         "    scheduler: str = \"simple\",\n",
         "    frames: int = 33,\n",
         "    fps: int = 16,\n",
-        "    output_format: str = \"mp4\"\n",
+        "    output_format: str = \"mp4\",\n",
+        "    overwrite: bool = False,\n",
+        "    use_lora_1: bool = False,\n",
+        "    LoRA_1_Strength: float = 1.0,\n",
+        "    use_lora_2: bool = False,\n",
+        "    LoRA_2_Strength: float = 1.0\n",
         "):\n",
         "\n",
         "    with torch.inference_mode():\n",
+        "\n",
+        "        # Initialize nodes\n",
+        "        unet_loader = UnetLoaderGGUF()\n",
+        "        model_sampling = ModelSamplingSD3()\n",
+        "        clip_loader = CLIPLoader()\n",
+        "        clip_encode_positive = CLIPTextEncode()\n",
+        "        clip_encode_negative = CLIPTextEncode()\n",
+        "        vae_loader = VAELoader()\n",
+        "        # clip_vision_loader = CLIPVisionLoader()\n",
+        "        # clip_vision_encode = CLIPVisionEncode()\n",
+        "        load_image = LoadImage()\n",
+        "        load_lora = LoraLoaderModelOnly()\n",
+        "        load_lora_1 = LoraLoaderModelOnly()\n",
+        "        load_lora_2 = LoraLoaderModelOnly()\n",
+        "        wan_vace_to_video = WanVaceToVideo()\n",
+        "        trim_video_latent = TrimVideoLatent()\n",
+        "        ksampler = KSampler()\n",
+        "        vae_decode = VAEDecode()\n",
+        "        save_webp = SaveAnimatedWEBP()\n",
+        "        save_webm = SaveWEBM()\n",
+        "\n",
         "        print(\"Loading Text_Encoder...\")\n",
         "        clip = clip_loader.load_clip(text_encoder, \"wan\", \"default\")[0]\n",
         "\n",
@@ -750,11 +861,30 @@
         "\n",
         "        print(\"Loading Unet Model...\")\n",
         "        model = unet_loader.load_unet(dit_model)[0]\n",
+        "\n",
         "        if use_causvid:\n",
         "            # if lora is not None:\n",
         "            print(\"Loading causvid Lora...\")\n",
-        "            model = load_lora.load_lora_model_only(model, causvid_lora, 1)[0]\n",
+        "            model = load_lora.load_lora_model_only(model, causvid_lora, causvid_lora_strength)[0]\n",
+        "\n",
+        "\n",
+        "        if use_lora_1:\n",
+        "            if lora_1 is not None:\n",
+        "                print(\"Loading LoRA 1...\")\n",
+        "                model = load_lora_1.load_lora_model_only(model, lora_1, LoRA_1_Strength)[0]\n",
+        "\n",
+        "        if use_lora_2:\n",
+        "            if lora_2 is not None:\n",
+        "                print(\"Loading LoRA 2...\")\n",
+        "                model = load_lora_2.load_lora_model_only(model, lora_2, LoRA_2_Strength)[0]\n",
+        "\n",
+        "\n",
         "        model = model_sampling.patch(model, 8)[0]\n",
+        "\n",
+        "        base_name = \"output\"\n",
+        "        if not overwrite:\n",
+        "            timestamp = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+        "            base_name += f\"_{timestamp}\"\n",
         "\n",
         "        print(\"Generating video...\")\n",
         "        sampled = ksampler.sample(\n",
@@ -782,6 +912,7 @@
         "            decoded = vae_decode.decode(vae, sampled)[0]\n",
         "\n",
         "            del vae\n",
+        "            del sampled\n",
         "            torch.cuda.empty_cache()\n",
         "            gc.collect()\n",
         "\n",
@@ -790,7 +921,7 @@
         "            output_path = \"\"\n",
         "            if frames == 1:\n",
         "                print(\"Single frame detected - saving as PNG image...\")\n",
-        "                output_path = save_as_image(decoded[0], \"ComfyUI\")\n",
+        "                output_path = save_as_image(decoded[0], base_name)\n",
         "                # print(f\"Image saved as PNG: {output_path}\")\n",
         "\n",
         "                display(IPImage(filename=output_path))\n",
@@ -799,20 +930,24 @@
         "                    print(\"Saving as WEBM...\")\n",
         "                    output_path = save_as_webm(\n",
         "                        decoded,\n",
-        "                        \"ComfyUI\",\n",
+        "                        base_name,\n",
         "                        fps=fps,\n",
         "                        codec=\"vp9\",\n",
         "                        quality=10\n",
         "                    )\n",
         "                elif output_format.lower() == \"mp4\":\n",
         "                    print(\"Saving as MP4...\")\n",
-        "                    output_path = save_as_mp4(decoded, \"ComfyUI\", fps)\n",
+        "                    output_path = save_as_mp4(decoded, base_name, fps)\n",
         "                else:\n",
         "                    raise ValueError(f\"Unsupported output format: {output_format}\")\n",
         "\n",
         "                # print(f\"Video saved as {output_format.upper()}: {output_path}\")\n",
         "\n",
         "                display_video(output_path)\n",
+        "\n",
+        "                del decoded\n",
+        "                torch.cuda.empty_cache()\n",
+        "                gc.collect()\n",
         "\n",
         "        except Exception as e:\n",
         "            print(f\"Error during decoding/saving: {str(e)}\")\n",
@@ -861,7 +996,7 @@
         "height = 720 # @param {\"type\":\"number\"}\n",
         "seed = 0 # @param {\"type\":\"integer\"}\n",
         "use_causvid_lora=True # @param {type:\"boolean\"}\n",
-        "causvid_lora_strength = 0.3 # @param {\"type\":\"slider\",\"min\":-1,\"max\":1,\"step\":0.01}\n",
+        "causvid_lora_strength = 1 # @param {\"type\":\"slider\",\"min\":-1,\"max\":1,\"step\":0.01}\n",
         "steps = 3 # @param {\"type\":\"integer\", \"min\":1, \"max\":100}\n",
         "cfg_scale = 1 # @param {\"type\":\"number\", \"min\":1, \"max\":20}\n",
         "sampler_name=\"uni_pc\" # @param [\"uni_pc\", \"uni_pc_bh2\", \"ddim\",\"euler\", \"euler_cfg_pp\", \"euler_ancestral\", \"euler_ancestral_cfg_pp\", \"heun\", \"heunpp2\",\"dpm_2\", \"dpm_2_ancestral\",\"lms\", \"dpm_fast\", \"dpm_adaptive\", \"dpmpp_2s_ancestral\", \"dpmpp_2s_ancestral_cfg_pp\", \"dpmpp_sde\", \"dpmpp_sde_gpu\",\"dpmpp_2m\", \"dpmpp_2m_cfg_pp\", \"dpmpp_2m_sde\", \"dpmpp_2m_sde_gpu\", \"dpmpp_3m_sde\", \"dpmpp_3m_sde_gpu\", \"ddpm\", \"lcm\",\"ipndm\", \"ipndm_v\", \"deis\", \"res_multistep\", \"res_multistep_cfg_pp\", \"res_multistep_ancestral\", \"res_multistep_ancestral_cfg_pp\",\"gradient_estimation\", \"er_sde\", \"seeds_2\", \"seeds_3\"]\n",
@@ -871,6 +1006,11 @@
         "# fps = 16 # @param {\"type\":\"integer\", \"min\":1, \"max\":60}\n",
         "fps = 16\n",
         "output_format = \"mp4\" # @param [\"mp4\", \"webm\"]\n",
+        "overwrite=True # @param {type:\"boolean\"}\n",
+        "use_lora_1=False # @param {type:\"boolean\"}\n",
+        "LoRA_1_Strength=1 # @param {\"type\":\"slider\",\"min\":-1,\"max\":1,\"step\":0.01}\n",
+        "use_lora_2=False # @param {type:\"boolean\"}\n",
+        "LoRA_2_Strength=1 # @param {\"type\":\"slider\",\"min\":-1,\"max\":1,\"step\":0.01}\n",
         "\n",
         "import random\n",
         "seed = seed if seed != 0 else random.randint(0, 2**32 - 1)\n",
@@ -892,7 +1032,12 @@
         "    scheduler=scheduler,\n",
         "    frames=frames,\n",
         "    fps=fps,\n",
-        "    output_format=output_format\n",
+        "    output_format=output_format,\n",
+        "    overwrite=overwrite,\n",
+        "    use_lora_1=use_lora_1,\n",
+        "    LoRA_1_Strength=LoRA_1_Strength,\n",
+        "    use_lora_2=use_lora_2,\n",
+        "    LoRA_2_Strength=LoRA_2_Strength\n",
         ")\n",
         "clear_memory()"
       ],
@@ -918,7 +1063,7 @@
         },
         "outputId": "e8021210-3666-4840-95d0-e05338f2a69f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
