Updated from Colab

--- a/Basic_Wan2_1_VACE_&_CausVid_LoRA_4_Text_to_Video(WIP).ipynb
+++ b/Basic_Wan2_1_VACE_&_CausVid_LoRA_4_Text_to_Video(WIP).ipynb
@@ -629,7 +629,7 @@
         "download_loRA_2 = True # @param {type:\"boolean\"}\n",
         "lora_2_download_url = \"https://huggingface.co/Isi99999/Wan2.1_14B-480p_I2V_LoRAs/resolve/main/5up3r_super_saiyan_transformation.safetensors\"# @param {\"type\":\"string\"}\n",
         "\n",
-        "token_if_civitai_url = \"b0d7617d73f49112b4cb8e6d6e2e5716\"# @param {\"type\":\"string\"}\n",
+        "token_if_civitai_url = \"Put your civitai token here\"# @param {\"type\":\"string\"}\n",
         "\n",
         "lora_1 = None\n",
         "if download_loRA_1:\n",
