Updated Fast_Wan2_1_14B_I2V_480p_GGUF_&_LoRA.ipynb to resolve environment setup issue caused by xformers version

--- a/Fast_Wan2_1_14B_I2V_480p_GGUF_&_LoRA.ipynb
+++ b/Fast_Wan2_1_14B_I2V_480p_GGUF_&_LoRA.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "96675e45HYsu",
@@ -51,10 +51,11 @@
       ],
       "source": [
         "# @title Prepare Environment\n",
-        "!pip install --upgrade --quiet torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
+        "# !pip install --upgrade --quiet torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
+        "!pip install torch==2.6.0 torchvision==0.21.0\n",
         "%cd /content\n",
         "from IPython.display import clear_output\n",
-        "!pip install -q torchsde einops diffusers accelerate xformers triton sageattention\n",
+        "!pip install -q torchsde einops diffusers accelerate xformers==0.0.29.post2 triton sageattention\n",
         "!pip install av\n",
         "clear_output()\n",
         "!git clone https://github.com/Isi-dev/ComfyUI\n",
